# playground2

./: .mcp.json  Cargo.toml  README.md
.claude/skills/slint/: SKILL.md  setup.md
.claude/skills/slint/reference/: debugging-and-mcp.md  drawing-and-theming.md  events-and-overlays.md  gotchas.md  interop.md  language-and-layout.md
docs/: README.md  issue-agent-docs-llms-txt.md  issue-agent-headless-check-cli.md  issue-agent-skill-distribution.md  issue-agent-templates.md  issue-compiler-diagnostics.md  slint-mcp-headless-rendering-issue.md
src/: data.rs  main.rs
tools/: gen_icons.py
ui/: globals.slint  icons.slint  main.slint  panels.slint  sidebar.slint  structs.slint  theme.slint  toolbar.slint  views.slint  widgets.slint
